alignments fixed

--- a/src/Screens/ContractManager/index.module.scss
+++ b/src/Screens/ContractManager/index.module.scss
@@ -2240,4 +2240,6 @@ input[type=number] {
     letter-spacing: 1.44px;
     color: #707070;
     opacity: 0.71;
+    word-break: break-word;
+    width: auto;
 }
